# advanced-roleplaying-framework-prototype

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: postgres-integration.yml  rust.yml
.plan/: README.md  advanced-roleplaying-engine-canonical-guide.md  advanced-roleplaying-engine-guide-as-is.md  advanced-roleplaying-engine-rust-implementation-2.md  dead-code-cleanup-action-plan.md  gap-analysis-vs-spec.md  implementation-plan.md  roleplaying-engine-code-review-action-plan.md  sparkling-dazzling-eclipse.md  test-improvement-plan.md
.plan/architecture/: 01-non-streaming-secrecy-boundary.md  02-docker-backed-ci.md  03-docs-current-state.md  04-engine-module-decomposition.md  05-state-delta-extensibility.md
.plan/features/: 01-scenario-authoring-cli.md  02-campaign-memory.md  03-session-timeline-debugger.md  04-provider-session-ux.md  05-replayable-exports-fixtures.md
.plan/gameplay/: 01-action-resolution-with-stakes.md  02-player-character-state.md  03-relationships-faction-pressure.md  04-secrets-clues-discovery.md  05-npc-agency.md  06-iron-archduke-scenario-mechanics.md
crates/: README.md
crates/api/: Cargo.toml  README.md
crates/api/src/: app.rs  error.rs  lib.rs  main.rs  state.rs
crates/api/tests/: behavioral_fixtures.rs  live_llama_postgres_smoke.rs  memory_api_flows.rs  postgres_api_flows.rs  provider_dispatch_tests.rs
crates/api/tests/common/: memory.rs  mod.rs  postgres.rs  replay.rs
crates/api/tests/fixtures/replay/: guildhall-flood.json  secret-leak-prevention.json
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/scenarios/samples/: ashfall-murder.json  bride-of-the-iron-archduke.json  chosen-beyond-goddess.json  glass-senate-crisis.json
crates/cli/scenarios/templates/: scenario.template.json
crates/cli/src/: bootstrap.rs  main.rs  render.rs  samples.rs  scenario_io.rs
crates/cli/src/commands/: chat.rs  dev.rs  mod.rs  provider.rs  scenario.rs  session.rs  turn.rs  world.rs
crates/cli/tests/: cli_smoke.rs
crates/domain/: Cargo.toml  DELTA_EXTENSION.md  README.md
crates/domain/src/: fixtures.rs  ids.rs  lib.rs  scenario.rs  state.rs  validation.rs
crates/domain/tests/: serde_roundtrip_tests.rs  validation_tests.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: context.rs  lib.rs  lock.rs  pipeline.rs  projection.rs  prompt.rs  reducer.rs  safety.rs  scene.rs  streaming.rs  validation.rs
crates/engine/src/pipeline/: events.rs  mod.rs  types.rs
crates/engine/src/prompt/: mod.rs  parser.rs  render.rs  repair.rs
crates/engine/src/prompt_fixtures/: combat_user_prompt.txt  dialogue_user_prompt.txt  mystery_user_prompt.txt  political_user_prompt.txt  rules_user_prompt.txt
crates/engine/tests/: non_streaming_pipeline.rs  streaming_pipeline.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/migrations/: 0001_core_schema.sql
crates/persistence/src/: lib.rs  lock.rs  repositories.rs  store.rs
crates/persistence/tests/: repository_tests.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: factory.rs  http.rs  lib.rs  llama_cpp.rs  mock.rs  openai_compatible.rs  openrouter.rs  provider.rs  secrets.rs
crates/providers/tests/: secrets_tests.rs  wiremock_llama_cpp_tests.rs  wiremock_openai_tests.rs  wiremock_openrouter_tests.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: config.rs  error.rs  lib.rs  replay.rs
release-log/: release.md
scripts/: test-with-local-llm.sh
