[workspace]
members = [
    "crates/api",
    "crates/domain",
    "crates/engine",
    "crates/persistence",
    "crates/providers",
    "crates/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
futures = "0.3"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "macros"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "cors", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

domain = { path = "crates/domain" }
engine = { path = "crates/engine" }
persistence = { path = "crates/persistence" }
providers = { path = "crates/providers" }
shared = { path = "crates/shared" }
