[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
domain.workspace = true
engine.workspace = true
futures.workspace = true
http.workspace = true
persistence.workspace = true
providers.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
bytes.workspace = true
http-body-util.workspace = true
providers.workspace = true
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tower.workspace = true
