[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
domain.workspace = true
futures.workspace = true
providers.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
