[package]
name = "persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
domain.workspace = true
engine.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
