[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = { version = "1", features = ["preserve_order"] }
sqlx.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
